# plotbot

./: .gitmodules
crawler/: baidu_image_crawler.py
stick_figure_detect/: CMakeLists.txt  main.cpp  stick_figure.cpp  stick_figure.h  stick_figure.i  stick_figure_detect.cpp  stick_figure_detect.h
stick_figure_detect/test_data/: 0.jpeg_compress.sc
